--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "fs-extra": "^8.1.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "pg": "^7.14.0",
